--- a/css/style2.css
+++ b/css/style2.css
@@ -92,7 +92,7 @@ header .social .btn {
   content: "";
   width: 3px;
   height: 100%;
-  background: #ee4d4d;
+  background: skyblue;
   left: 50%;
   top: 0;
   position: absolute;
@@ -108,7 +108,7 @@ header .social .btn {
   position: relative;
 }
 #timeline .timeline-item .timeline-icon {
-  background: #ee4d4d;
+  background: skyblue;
   width: 50px;
   height: 50px;
   position: absolute;
@@ -145,7 +145,7 @@ header .social .btn {
 }
 #timeline .timeline-item .timeline-content h2 {
   padding: 15px;
-  background: #ee4d4d;
+  background: skyblue;
   color: #fff;
   margin: -20px -20px 0 -20px;
   font-weight: 300;
@@ -163,7 +163,7 @@ header .social .btn {
   height: 0;
   border-top: 7px solid transparent;
   border-bottom: 7px solid transparent;
-  border-left: 7px solid #ee4d4d;
+  border-left: 7px solid skyblue;
 }
 #timeline .timeline-item .timeline-content.right {
   float: right;
@@ -173,15 +173,15 @@ header .social .btn {
   right: 45%;
   left: inherit;
   border-left: 0;
-  border-right: 7px solid #ee4d4d;
+  border-right: 7px solid skyblue;
 }
 
 .btn {
   padding: 5px 15px;
   text-decoration: none;
   background: transparent;
-  border: 2px solid #f27c7c;
-  color: #f27c7c;
+  border: skyblue;
+  color: skyblue;
   display: inline-block;
   position: relative;
   text-transform: uppercase;
@@ -197,7 +197,7 @@ header .social .btn {
   -webkit-box-shadow: 2px 2px 0 #f27c7c;
   -moz-box-shadow: 2px 2px 0 #f27c7c;
   -ms-box-shadow: 2px 2px 0 #f27c7c;
-  box-shadow: 2px 2px 0 #f27c7c;
+  box-shadow: 2px 2px 0 skyblue;
 }
 .btn:hover {
   box-shadow: none;
